iPad scroll headerjump fix1

--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -282,6 +282,8 @@ $widthMidCol: 36%;
 
 .screen-top {
     padding-top: 55px;
+
+    height: 800px;
 }
 
 .col {
